Análisis de las variables del dataset

--- a/MDS_TFM_CreditRisk.Rmd
+++ b/MDS_TFM_CreditRisk.Rmd
@@ -249,6 +249,11 @@ count(fin_credrisk)
 
 ```
 
+```{r, include=TRUE, message=FALSE, warning = FALSE,tidy=TRUE, tidy.opts=list(width.cutoff=60)}
+plot(fin_credrisk$person_age, fin_credrisk$person_emp_length)
+
+```
+
 # 5. Partición del conjunto de datos: data set training y data set test
 
 Una vez vistos por encima la estructura general de los datos, pasamos a dividir el conjunto de datos en dos para diferenciar los que usaremos de entrenamiento de los que usaremos de test (viendo la cantidad de datos de la que disponemos, la distribución elegida ha sido: 20% test y 80% training). Establecemos una semilla que nos guarde de forma permanente la división que hacemos para que la distribución de los datos sea siempre la misma.
@@ -270,17 +275,84 @@ fcr_test
 
 ## 6.1. Análisis de la distribución de las variables
 
-Analizamos como se distribuyen las diferentes variables de nuestro dataset.
+Analizamos como se distribuyen las diferentes variables de nuestro dataset:
+
+* **Variables numéricas relativas a la persona**
 
 ```{r, include=TRUE, message=FALSE, warning = FALSE,tidy=TRUE, tidy.opts=list(width.cutoff=60)}
-fcr_train %>% keep(is.numeric) %>% gather() %>% ggplot(aes(value,fill=key)) +facet_wrap(~ key, scales = "free") + geom_histogram(bins=sqrt(nrow(fcr_train)))+ theme(legend.position="none")
+ga <- fcr_train %>%
+    ggplot(aes(x = person_age)) + geom_histogram(bins = 20,
+    fill = "#619CFF")
+
+gb <- fcr_train %>%
+    ggplot(aes(x = person_income)) + geom_histogram(bins = 20,
+    fill = "#E58700") + theme(axis.text.x = element_text(angle = 10, hjust = 0.5, vjust = 0.5))
+
+gd <- fcr_train %>%
+    ggplot(aes(x = person_emp_length)) + geom_histogram(bins = 20,
+    fill = "#FD61D1")
+
+gl <- fcr_train %>%
+    ggplot(aes(x = cb_person_cred_hist_length)) + geom_histogram(bins = 20,
+    fill = "#CDAD00")
+
+grid.arrange(ga, gb, gd, gl)
 
 ```
 
+* **Variables numéricas relativas al préstamo**
+
 ```{r, include=TRUE, message=FALSE, warning = FALSE,tidy=TRUE, tidy.opts=list(width.cutoff=60)}
-fcr_train %>% keep(is.factor) %>% gather() %>% ggplot(aes(value,fill=key)) +facet_wrap(~ key, scales = "free") + geom_histogram(bins=sqrt(nrow(fcr_train)),stat="count")+ theme(legend.position="none")
+gg <- fcr_train %>%
+    ggplot(aes(x = loan_amnt)) + geom_histogram(bins = 20,
+    fill = "#8B2323")
+
+gh <- fcr_train %>%
+    ggplot(aes(x = loan_int_rate)) + geom_histogram(bins = 20,
+    fill = "#00008B")
+
+gi <- fcr_train %>%
+    ggplot(aes(x = loan_status)) + geom_histogram(bins = 20,
+    fill = "#98F5FF")
+
+gj <- fcr_train %>%
+    ggplot(aes(x = loan_percent_income)) + geom_histogram(bins = 20,
+    fill = "#7FFF00")
+
+grid.arrange(gg, gh, gi, gj)
 
 ```
+
+* **Variables categóricas relativas a la persona**
+
+```{r, include=TRUE, message=FALSE, warning = FALSE,tidy=TRUE, tidy.opts=list(width.cutoff=60)}
+gc <- fcr_train %>%
+    ggplot(aes(x = person_home_ownership)) + geom_histogram(bins = 20,
+    fill = "#00CD00", stat="count")
+
+gk <- fcr_train %>%
+    ggplot(aes(x = cb_person_default_on_file)) + geom_histogram(bins = 20,
+    fill = "#7FFFD4", stat="count")
+
+grid.arrange(gc, gk)
+
+```
+
+* **Variables categóricas relativas al préstamo**
+
+```{r, include=TRUE, message=FALSE, warning = FALSE,tidy=TRUE, tidy.opts=list(width.cutoff=60)}
+ge <- fcr_train %>%
+    ggplot(aes(x = loan_intent)) + geom_histogram(bins = 20,
+    fill = "#B983FF", stat="count") + theme(axis.text.x = element_text(angle = 10, hjust = 0.75, vjust = 0.75))
+
+gf <- fcr_train %>%
+    ggplot(aes(x = loan_grade)) + geom_histogram(bins = 20,
+    fill = "#FFFF00", stat="count")
+
+grid.arrange(ge, gf)
+
+```
+
 
 
 
